Fixed viewport scaling issue on mobiles.

--- a/sass/birdhouse.scss
+++ b/sass/birdhouse.scss
@@ -10,16 +10,6 @@
 @import "_variables";
 @import "_mixins";
 
-@viewport {
-    width: device-width;
-    zoom: 1;
- }
-
-@-ms-viewport {
-  width: device-width;
-  zoom: 1;
-}
-
 .birdhouse{
     width: 100%; 
     max-width: $birdhouse-grid-max-width;
